<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/bg4">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/logo"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/tv_name"
            android:layout_width="300dp"
            android:layout_height="71dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/cutive"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/tv_email"
            android:layout_width="300dp"
            android:layout_height="71dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/cutive"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/tv_phone"
            android:layout_width="300dp"
            android:layout_height="71dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/cutive"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/tv_pgname"
            android:layout_width="300dp"
            android:layout_height="71dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/cutive"
            android:hint="@string/pg_name"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="300dp"
            android:layout_height="71dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/cutive"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="41dp"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="40dp"
            android:background="#3F51B5"
            android:fontFamily="@font/cherry_swash"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/amarante"
            android:text="@string/already_registered_login_here"
            android:textColor="#0E0E0E"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="270dp"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/devlogo" />
    </LinearLayout>
</RelativeLayout>